--- a/Style.css
+++ b/Style.css
@@ -77,3 +77,11 @@ button:hover {
 .hidden {
   display: none;
 }
+
+button[disabled] {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+button[disabled]:hover {
+  transform: none;
+}
